--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
       <section class="description">
         <div class="two-columns">
           <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
-          <div class="two-columns_main-text">
+          <div class="two-columns__main-text">
             <div class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
               Мы готовимся к экзаментам и учим билеты. Мы тренируемся решать однообразные задачи,
               чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания.
               Зубрежка быстро выветривается и не приносит пользы.
             </div>
             <div class="two-columns__paragraph">
-              <span class="two-colums__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+              <span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
             </div>
             <div class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и
               захватывающим. Эти же техники применяются на примере обучения в Практикуме.
@@ -92,7 +92,7 @@
         <h2 class="section-title section-title_theme_dark">Принципы обучения </h2>
         <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
 
-        <div class="table">
+        <div class="table table_theme_dark">
           <div class="table__cell table__cell_theme_dark">
             <h4 class="table__heading">1</h4>
             <p class="table__text">Выберите привлекательный проект.</p>
