--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
         <div class="two-columns">
           <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
           <div class="two-columns__main-text">
-            <div class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
               Мы готовимся к экзаментам и учим билеты. Мы тренируемся решать однообразные задачи,
               чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания.
               Зубрежка быстро выветривается и не приносит пользы.
-            </div>
-            <div class="two-columns__paragraph">
+            </p>
+            <p class="two-columns__paragraph">
               <span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
-            </div>
-            <div class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и
+            </p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и
               захватывающим. Эти же техники применяются на примере обучения в Практикуме.
-            </div>
+            </p>
           </div>
         </div>
       </section>
 
       <section class="digits">
         <h2 class="section-title"> Цифры и факты </h2>
-        <h3 class="section-subtitle">Про учёбу и мозг</h3>
+        <p class="section-subtitle">Про учёбу и мозг</p>
 
         <div class="table">
           <div class="table__cell">
@@ -134,7 +134,7 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Треугольник">
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
     <footer class="footer">
@@ -145,25 +145,39 @@
         </div>
         <div class="footer__column footer__column_content_info">
           <div class="footer__column-heading">О Практикуме </div>
-          <div class="footer__column-links">
-            <a href="#" class="footer__column-link">Главная</a>
-            <a href="#" class="footer__column-link">Концепция</a>
-            <a href="#" class="footer__column-link">Наставники</a>
-          </div>
+          <nav>
+            <ul class="footer__column-links">
+              <li>
+                <a href="#" class="footer__column-link">Главная</a>
+              </li>
+              <li>
+                <a href="#" class="footer__column-link">Концепция</a>
+              </li>
+              <li>
+                <a href="#" class="footer__column-link">Наставники</a>
+              </li>
+            </ul>
+          </nav>
         </div>
         <div class="footer__column footer__column_content_social">
           <div class="footer__column-heading">Соцсети </div>
-          <div class="footer__column-links">
-            <a href="#" class="footer__column-link">
-              <img class="footer__column-social-icon" src="./images/facebook_color_white.svg" alt="Facebook">Facebook
-            </a>
-            <a href="#" class="footer__column-link">
-              <img class="footer__column-social-icon" src="./images/vk_color_white.svg" alt="Vkontakte">ВКонтакте
-            </a>
-            <a href="#" class="footer__column-link">
-              <img class="footer__column-social-icon" src="./images/instagram_color_white.svg" alt="Instagram">Instagram
-            </a>
-          </div>
+          <ul class="footer__column-links">
+            <li>
+              <a href="#" class="footer__column-link">
+                <img class="footer__column-social-icon" src="./images/facebook_color_white.svg" alt="Facebook">Facebook
+              </a>
+            </li>
+            <li>
+              <a href="#" class="footer__column-link">
+                <img class="footer__column-social-icon" src="./images/vk_color_white.svg" alt="Vkontakte">ВКонтакте
+              </a>
+            </li>
+            <li>
+              <a href="#" class="footer__column-link">
+                <img class="footer__column-social-icon" src="./images/instagram_color_white.svg" alt="Instagram">Instagram
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
