--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <header class="header">
       <div class="logo logo_place_header"> </div> <!-- src="./images/logo_place_header.svg">-->
       <h1 class="header__title"> Научиться учиться</h1>
-      <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a href="#" class="header__link">Узнать &rarr;</a>
-      </h2>
+      </p>
       <img class="header__main-illustration" alt="Опять двойка" src="./images/header-image.png">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
               Мы готовимся к экзаментам и учим билеты. Мы тренируемся решать однообразные задачи,
