--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./blocks/page/index.css">
 </head>
 <body>
   <div class="page">
     <header class="header">
-      <div class="logo logo_place_header"> </div> <!-- src="./images/logo_place_header.svg">-->
+      <div class="logo logo_place_header"> </div>
       <h1 class="header__title"> Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a href="#" class="header__link">Узнать &rarr;</a>
       </p>
       <img class="header__main-illustration" alt="Опять двойка" src="./images/header-image.png">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -38,10 +37,70 @@
         </div>
       </section>
 
+      <section class=" techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <div class="cards">
+          <div class="cards__item">
+            <img class="cards__image" src="/images/cards-attention.png" alt="Два вида внимания">
+            <div class="cards__title">Два вида внимания</div>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="/images/cards-recall.png" alt="Два вида внимания">
+            <div class="cards__title">Recall</div>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="/images/cards-interliving.png" alt="Два вида внимания">
+            <div class="cards__title">Интерливинг</div>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="/images/cards-question.png" alt="Два вида внимания">
+            <div class="cards__title">Вопросы</div>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="/images/cards-competence.png" alt="Два вида внимания">
+            <div class="cards__title">Иллюзия компетентности</div>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="video">
+        <h2 class="section-title">Видео на TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameboard allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </section>
+
+      <section class="oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она
+              изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И
+              тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому
+              всё ясно с первого взгляда.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана </h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть </h3>
+        <a href="#" class="feynman__link">Подробнее &rarr; </a>
+        <img src="./images/feynman.png" class="feynman__image" alt="Фейнман">
+      </section>
+
       <section class="digits">
         <h2 class="section-title"> Цифры и факты </h2>
         <p class="section-subtitle">Про учёбу и мозг</p>
-
         <div class="table">
           <div class="table__cell">
             <h4 class="table__heading">86 миллиардов</h4>
@@ -78,20 +137,28 @@
             <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
-
       </section>
 
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана </h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть </h3>
-        <a href="#" class="feynman__link">Подробнее &rarr; </a>
-        <img src="./images/feynman.png" class="feynman__image" alt="Фейнман">
+      <section class="khan">
+        <div class="khan__container">
+          <h3 class="khan__author">Салман Хан</h3>
+          <h2 class="khan__title">Весь мир - школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем,
+            кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <div class="khan__book-pic">
+              <img src="/images/khan-book.jpg" alt="Обложка книги">
+            </div>
+            <div class="khan__buy-link">Купить книгу &rarr;</div>
+          </div>
+        </div>
       </section>
 
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения </h2>
         <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
-
         <div class="table table_theme_dark">
           <div class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">1</h4>
@@ -134,9 +201,22 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
       </section>
+
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+        <div class="resources__logo-zone">
+            <a href="https://arzamas.academy/"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Arzamas"></a>
+            <a href="https://nplus1.ru/"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="N+1"></a>
+            <a href="https://strelka.com/ru/"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Strelka"></a>
+            <a href="https://polka.academy/"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Polka"></a>
+        </div>
+      </section>
+
     </main>
+
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
