--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="./images/cards-recall.png" alt="Два вида внимания">
+            <img class="cards__image" src="./images/cards-recall.png" alt="Recall">
             <div class="cards__title">Recall</div>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="./images/cards-interliving.png" alt="Два вида внимания">
+            <img class="cards__image" src="./images/cards-interliving.png" alt="Интерливинг">
             <div class="cards__title">Интерливинг</div>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="./images/cards-question.png" alt="Два вида внимания">
+            <img class="cards__image" src="./images/cards-question.png" alt="Вопросы">
             <div class="cards__title">Вопросы</div>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="./images/cards-competence.png" alt="Два вида внимания">
+            <img class="cards__image" src="./images/cards-competence.png" alt="Иллюзия компетентности">
             <div class="cards__title">Иллюзия компетентности</div>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </div>
@@ -93,7 +93,7 @@
 
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана </h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть </h3>
+        <p class="feynman__subtitle">Выучить и не забыть </p>
         <a href="#" class="feynman__link">Подробнее &rarr; </a>
         <img src="./images/feynman.png" class="feynman__image" alt="Фейнман">
       </section>
@@ -141,24 +141,22 @@
 
       <section class="khan">
         <div class="khan__container">
-          <h2 class="khan__author">Салман Хан</h2>
-          <h3 class="khan__title">Весь мир - школа</h3>
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир - школа</h2>
           <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем,
             кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <div class="khan__book-pic">
-              <img src="./images/khan-book.jpg" alt="Обложка книги">
-            </div>
-            <div class="khan__buy-link">Купить книгу &rarr;</div>
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Обложка книги">
+            <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
           </div>
         </div>
       </section>
 
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения </h2>
-        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <div class="table table_theme_dark">
           <div class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">1</h4>
@@ -206,13 +204,29 @@
 
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
-        <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
-        <div class="resources__logo-zone">
-            <a href="https://arzamas.academy/"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Arzamas"></a>
-            <a href="https://nplus1.ru/"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="N+1"></a>
-            <a href="https://strelka.com/ru/"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Strelka"></a>
-            <a href="https://polka.academy/"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Polka"></a>
-        </div>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <ul class="resources__logo-zone">
+          <li>
+            <a href="https://arzamas.academy/">
+              <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Arzamas">
+            </a>
+          </li>
+          <li>
+            <a href="https://nplus1.ru/">
+              <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="N+1">
+            </a>
+          </li>
+          <li>
+            <a href="https://strelka.com/ru/">
+              <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Strelka">
+            </a>
+          </li>
+          <li>
+            <a href="https://polka.academy/">
+              <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Polka">
+            </a>
+          </li>
+        </ul>
       </section>
 
     </main>
@@ -221,7 +235,7 @@
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"> </div>
-          <div class="footer__author">&copy; 2019, Виктор Абанькин</div>
+          <p class="footer__author">&copy; 2019, Виктор Абанькин</p>
         </div>
         <div class="footer__column footer__column_content_info">
           <div class="footer__column-heading">О Практикуме </div>
@@ -244,17 +258,17 @@
           <ul class="footer__column-links">
             <li>
               <a href="#" class="footer__column-link">
-                <img class="footer__column-social-icon" src="./images/facebook_color_white.svg" alt="Facebook">Facebook
+                <img class="footer__column-social-icon" src="./images/facebook_color_white.svg" alt="Фейсбук">Facebook
               </a>
             </li>
             <li>
               <a href="#" class="footer__column-link">
-                <img class="footer__column-social-icon" src="./images/vk_color_white.svg" alt="Vkontakte">ВКонтакте
+                <img class="footer__column-social-icon" src="./images/vk_color_white.svg" alt="Вконтакте">ВКонтакте
               </a>
             </li>
             <li>
               <a href="#" class="footer__column-link">
-                <img class="footer__column-social-icon" src="./images/instagram_color_white.svg" alt="Instagram">Instagram
+                <img class="footer__column-social-icon" src="./images/instagram_color_white.svg" alt="Инстаграм">Instagram
               </a>
             </li>
           </ul>
