--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="./images/cards-recall.png" alt="Recall">
+            <img class="cards__image" src="./images/cards-recall.png" alt="Повторы">
             <div class="cards__title">Recall</div>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </div>
@@ -208,22 +208,22 @@
         <ul class="resources__logo-zone">
           <li>
             <a href="https://arzamas.academy/">
-              <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Arzamas">
+              <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Арзамас">
             </a>
           </li>
           <li>
             <a href="https://nplus1.ru/">
-              <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="N+1">
+              <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Н+1">
             </a>
           </li>
           <li>
             <a href="https://strelka.com/ru/">
-              <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Strelka">
+              <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Стрелка">
             </a>
           </li>
           <li>
             <a href="https://polka.academy/">
-              <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Polka">
+              <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Полка">
             </a>
           </li>
         </ul>
